--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         background-color: rgba(99, 102, 241, 0.1);
         border-radius: 4px;
       }
+      /* Force mobile styles for hero subtitle to prevent CMS overrides */
+      @media (max-width: 640px) {
+        #hero-subtitle {
+          font-size: 14px !important;
+          line-height: 20px !important;
+        }
+      }
     </style>
   <script type="importmap">
 {
